Menambah dependencies di build.gradle(app) Menambah feature Calendar Menambah file Event.java di Folder pojo Menambah file MyJsonService.java di Folder service Menambah icon ic_view_week.xml, ic_calendar.png Menambah layout activity_calendar.xml dan activity_week_view.xml Menambah menu menu_calendar.xml dan menu_calendar_week_view.xml

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -60,6 +60,14 @@
             android:name=".activity.ChatActivity"
             android:label="Chat Forum"
             android:parentActivityName=".MainActivity" />
+        <activity
+            android:name=".activity.CalendarActivity"
+            android:label="Calendar"
+            android:parentActivityName=".MainActivity" />
+        <activity
+            android:name=".activity.WeekViewActivity"
+            android:label="Week View Calendar"
+            android:parentActivityName=".activity.CalendarActivity" />
     </application>
 
 </manifest>
