--- a/app/build.gradle
+++ b/app/build.gradle
@@ -24,31 +24,61 @@ dependencies {
     implementation 'com.android.support:design:26.1.0'
     implementation 'com.android.support.constraint:constraint-layout:1.0.2'
     implementation 'com.android.support:support-v4:26.1.0'
+    implementation 'com.android.support:recyclerview-v7:26.1.0'
+    implementation 'com.android.support:cardview-v7:26.1.0'
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.1'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.1'
+
+    //Butterknife
     compile 'com.jakewharton:butterknife:8.8.1'
     annotationProcessor 'com.jakewharton:butterknife-compiler:8.8.1'
+
+    //Pinview
     compile 'com.github.GoodieBag:Pinview:v1.3'
+
+    //Loading Indicator
     compile 'com.wang.avi:library:2.1.3'
+
+    //Calling an HTTP Request Library
+    compile 'com.squareup.retrofit:retrofit:1.9.0'
     compile 'com.squareup.retrofit2:retrofit:2.3.0'
     compile 'com.squareup.retrofit2:converter-gson:2.3.0'
-    compile 'com.squareup.picasso:picasso:2.5.2'
-    compile 'com.github.ViksaaSkool:AwesomeSplash:v1.0.0'
-    compile 'com.github.vipulasri:timelineview:1.0.6'
-    implementation 'com.android.support:recyclerview-v7:26.1.0'
-    implementation 'com.android.support:cardview-v7:26.1.0'
     compile 'com.android.volley:volley:1.1.0'
+
+    //Splashscreen Animation
+    compile 'com.github.ViksaaSkool:AwesomeSplash:v1.0.0'
+
+    //Timeline View
+    compile 'com.github.vipulasri:timelineview:1.0.6'
+
+    //Bottombar Navigation
     compile 'com.roughike:bottom-bar:2.3.1'
+
+    //Floating Action Button
     compile 'com.getbase:floatingactionbutton:1.10.1'
-    compile 'com.github.wangjiegulu:RapidFloatingActionButton:1.0.3'
+
+    //Google Firebase
     compile 'com.google.firebase:firebase-core:11.8.0'
     compile 'com.firebaseui:firebase-ui:3.1.3'
-    compile 'de.hdodenhof:circleimageview:2.2.0'
 
+    //Image Loader
+    compile 'de.hdodenhof:circleimageview:2.2.0'
+    compile 'com.squareup.picasso:picasso:2.5.2'
+
+    //Calendar Week view
+    compile 'com.squareup:android-times-square:1.6.5@aar'
+    compile 'com.github.alamkanak:android-week-view:1.2.6'
 
 }
 
 apply plugin: 'com.google.gms.google-services'
+
+
+
+
+
+
+
 
 
