--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -8,7 +8,7 @@
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
     <uses-permission android:name="android.permission.ACCESS_WIFI_STATE" />
-    <uses-permission android:name="android.permission.USE_FINGERPRINT" />\
+    <uses-permission android:name="android.permission.USE_FINGERPRINT" />
 
     <application
         android:allowBackup="true"
@@ -24,8 +24,8 @@
         <activity
             android:name=".activity.LoginActivity"
             android:label="Login"
-            android:theme="@style/Theme.Design.Light.NoActionBar"
-            android:launchMode="singleTask"/>
+            android:launchMode="singleTask"
+            android:theme="@style/Theme.Design.Light.NoActionBar" />
         <activity
             android:name=".activity.SummaryOfPatientPerFloorActivity"
             android:parentActivityName=".MainActivity" />
@@ -70,6 +70,10 @@
             android:name=".activity.WeekViewActivity"
             android:label="Week View Calendar"
             android:parentActivityName=".activity.CalendarActivity" />
+        <activity
+            android:name=".activity.DrugListActivity"
+            android:label="Daftar Obat"
+            android:parentActivityName=".activity.PatientRecyclerViewActivity" />
     </application>
 
 </manifest>
