--- a/app/build.gradle
+++ b/app/build.gradle
@@ -30,50 +30,62 @@ dependencies {
     androidTestImplementation 'com.android.support.test:runner:1.0.1'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.1'
 
-    //Butterknife
+    //region Butterknife
     compile 'com.jakewharton:butterknife:8.8.1'
     annotationProcessor 'com.jakewharton:butterknife-compiler:8.8.1'
+    //endregion
 
+    //region PinView
     //Pinview
     compile 'com.github.GoodieBag:Pinview:v1.3'
+    //endregion
 
-    //Loading Indicator
+
+    //region Loading Indicator
     compile 'com.wang.avi:library:2.1.3'
+    //endregion
 
-    //Calling an HTTP Request Library
+    //region Calling an HTTP Request Library
     compile 'com.squareup.retrofit:retrofit:1.9.0'
     compile 'com.squareup.retrofit2:retrofit:2.3.0'
     compile 'com.squareup.retrofit2:converter-gson:2.3.0'
     compile 'com.android.volley:volley:1.1.0'
+    //endregion
 
-    //Splashscreen Animation
+    //region Splashscreen Animation
     compile 'com.github.ViksaaSkool:AwesomeSplash:v1.0.0'
+    //endregion
 
-    //Timeline View
+    //region Timeline View
     compile 'com.github.vipulasri:timelineview:1.0.6'
+    //endregion
 
-    //Bottombar Navigation
+    //region Bottombar Navigation
     compile 'com.roughike:bottom-bar:2.3.1'
+    compile 'com.ss.bottomnavigation:bottomnavigation:1.5.2'
+    //endregion
 
-    //Floating Action Button
+    //region Floating Action Button
     compile 'com.getbase:floatingactionbutton:1.10.1'
+    //endregion
 
-    //Google Firebase
+    //region Google Firebase
     compile 'com.google.firebase:firebase-core:11.8.0'
     compile 'com.firebaseui:firebase-ui:3.1.3'
+    //endregion
 
-    //Image Loader
+    //region Image Loader
     compile 'de.hdodenhof:circleimageview:2.2.0'
     compile 'com.squareup.picasso:picasso:2.5.2'
+    //endregion
 
-    //Calendar Week view
+    //region Calendar Week view
     /*current*/
     compile 'com.squareup:android-times-square:1.6.5@aar'
     compile 'com.github.alamkanak:android-week-view:1.2.6'
     /*new*/
     compile 'com.applandeo:material-calendar-view:1.4.0'
-
-
+    //endregion
 }
 
 
