--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -19,7 +19,7 @@
         android:theme="@style/AppTheme">
         <activity
             android:name=".MainActivity"
-            android:label="@string/app_name"
+            android:label="Dashboard"
             android:theme="@style/AppTheme.NoActionBar" />
         <activity
             android:name=".activity.LoginActivity"
@@ -31,8 +31,8 @@
             android:parentActivityName=".MainActivity" />
         <activity
             android:name=".activity.PatientDetailActivity"
-            android:label="Patient Detail"
-            android:parentActivityName=".activity.PatientRecyclerViewActivity" />
+            android:parentActivityName=".activity.PatientRecyclerViewActivity"
+            android:theme="@style/Theme.AppCompat.Light.NoActionBar" />
         <activity
             android:name=".activity.AnimatedSplashScreenActivity"
             android:theme="@style/Theme.AppCompat.Light.NoActionBar">
@@ -66,7 +66,10 @@
             android:name=".activity.DrugListActivity"
             android:label="Daftar Obat"
             android:parentActivityName=".activity.PatientRecyclerViewActivity" />
-        <activity android:name=".activity.CalendarViewActivity"></activity>
+        <activity
+            android:name=".activity.CalendarViewActivity"
+            android:label="Calendar"
+            android:parentActivityName=".MainActivity" />
     </application>
 
 </manifest>
